@@ -89,68 +89,110 @@ module Gluon::Test
       EOF
     end
 
-    def assert_optional_id(page_type, method, expr)
+    def assert_optional_id(page_type, method, start_with,
+                           expr_simple, expr_embedded_attr)
       anon_page_type = Class.new(page_type) {
         gluon_advice method, :id => 'foo'
       }
       build_page(anon_page_type)
-      assert_match(/ id="foo"/, render_page(expr))
+      assert_match(start_with, render_page(expr_simple))
+      assert_match(/ id="foo"/, render_page(expr_simple), 'immedate valule.')
 
       anon_page_type = Class.new(page_type) {
         gluon_advice method, :id => proc{ 'foo' }
       }
       build_page(anon_page_type)
-      assert_match(/ id="foo"/, render_page(expr))
+      assert_match(start_with, render_page(expr_simple))
+      assert_match(/ id="foo"/, render_page(expr_simple, 'procedure.'))
 
       anon_page_type = Class.new(page_type) {
         define_method(:opt_id) { 'foo' }
         gluon_advice method, :id => instance_method(:opt_id)
       }
       build_page(anon_page_type)
-      assert_match(/ id="foo"/, render_page(expr))
+      assert_match(start_with, render_page(expr_simple))
+      assert_match(/ id="foo"/, render_page(expr_simple), 'instance method.')
+
+      build_page(page_type)
+      assert_match(start_with, render_page(expr_embedded_attr))
+      assert_match(/ id="foo"/, render_page(expr_embedded_attr),
+		   'embedded value at template.')
+
+      anon_page_type = Class.new(page_type) {
+        gluon_advice method, :id => 'bar'
+      }
+      build_page(anon_page_type)
+      assert_match(start_with, render_page(expr_embedded_attr))
+      assert_match(/ id="bar"/, render_page(expr_embedded_attr),
+		   'advice than embedded.')
+      assert_no_match(/ id="foo"/, render_page(expr_embedded_attr),
+		      'advice than embedded.')
     end
     private :assert_optional_id
 
-    def self.def_test_optional_id(name, page_type, method)
+    def self.def_test_optional_id(name, page_type, method, start_with)
       file, line, = Caller.caller_frame(1)
       module_eval(<<-EOF, "#{__FILE__},test_#{name}_optional_id(#{line})", __LINE__ + 1)
         def test_#{name}_optional_id
           assert_optional_id(#{page_type},
                              #{method.to_sym.inspect},
-                             view_template_#{name})
+                             /^\#{Regexp.quote(#{start_with.dump})}/,
+                             view_template_#{name},
+                             view_template_#{name}_embedded_attr_id)
         end
       EOF
     end
 
-    def assert_optional_class(page_type, method, expr)
+    def assert_optional_class(page_type, method, start_with,
+                              expr_simple, expr_embedded_attr)
       anon_page_type = Class.new(page_type) {
         gluon_advice method, :class => 'foo'
       }
       build_page(anon_page_type)
-      assert_match(/ class="foo"/, render_page(expr))
+      assert_match(start_with, render_page(expr_simple))
+      assert_match(/ class="foo"/, render_page(expr_simple), 'immedate value.')
 
       anon_page_type = Class.new(page_type) {
         gluon_advice method, :class => proc{ 'foo' }
       }
       build_page(anon_page_type)
-      assert_match(/ class="foo"/, render_page(expr))
+      assert_match(start_with, render_page(expr_simple))
+      assert_match(/ class="foo"/, render_page(expr_simple), 'procedure.')
 
       anon_page_type = Class.new(page_type) {
         define_method(:opt_class) { 'foo' }
         gluon_advice method, :class => instance_method(:opt_class)
       }
       build_page(anon_page_type)
-      assert_match(/ class="foo"/, render_page(expr))
+      assert_match(start_with, render_page(expr_simple))
+      assert_match(/ class="foo"/, render_page(expr_simple), 'instance method.')
+
+      build_page(page_type)
+      assert_match(start_with, render_page(expr_embedded_attr))
+      assert_match(/ class="foo"/, render_page(expr_embedded_attr),
+                   'embedded value at template.')
+
+      anon_page_type = Class.new(page_type) {
+        gluon_advice method, :class => 'bar'
+      }
+      build_page(anon_page_type)
+      assert_match(start_with, render_page(expr_embedded_attr))
+      assert_match(/ class="bar"/, render_page(expr_embedded_attr),
+                   'advice than embedded.')
+      assert_no_match(/ class="foo"/, render_page(expr_embedded_attr),
+                      'advice than embedded.')
     end
     private :assert_optional_class
 
-    def self.def_optional_class_test(name, page_type, method)
+    def self.def_test_optional_class(name, page_type, method, start_with)
       file, line, = Caller.caller_frame(1)
       module_eval(<<-EOF, "#{__FILE__},test_#{name}_optional_class(#{line})", __LINE__ + 1)
         def test_#{name}_optional_class
           assert_optional_class(#{page_type},
                                 #{method.to_sym.inspect},
-                                view_template_#{name})
+                                /^\#{Regexp.quote(#{start_with.dump})}/,
+                                view_template_#{name},
+                                view_template_#{name}_embedded_attr_class)
         end
       EOF
     end
@@ -224,8 +266,8 @@ module Gluon::Test
       '<a href="/Foo">foo</a>'
     def_test_view :link_content, PageForLink,
       '<a href="/Foo">should be picked up.</a>'
-    def_test_optional_id :link, PageForLink, :foo
-    def_optional_class_test :link, PageForLink, :foo
+    def_test_optional_id :link, PageForLink, :foo, '<a '
+    def_test_optional_class :link, PageForLink, :foo, '<a '
 
     class PageForAction < SimplePage
       def foo
@@ -237,8 +279,8 @@ module Gluon::Test
       '<a href="/bar.cgi?foo%28%29">Action</a>'
     def_test_view :action_content, PageForAction,
       '<a href="/bar.cgi?foo%28%29">should be picked up.</a>'
-    def_test_optional_id :action, PageForAction, :foo
-    def_optional_class_test :action, PageForAction, :foo
+    def_test_optional_id :action, PageForAction, :foo, '<a '
+    def_test_optional_class :action, PageForAction, :foo, '<a '
 
     class PageForFrame < SimplePage
       def foo
@@ -251,8 +293,8 @@ module Gluon::Test
       '<frame src="/Foo" />'
     def_test_view :frame_content_ignored, PageForFrame,
       '<frame src="/Foo" />'
-    def_test_optional_id :frame, PageForFrame, :foo
-    def_optional_class_test :frame, PageForFrame, :foo
+    def_test_optional_id :frame, PageForFrame, :foo, '<frame '
+    def_test_optional_class :frame, PageForFrame, :foo, '<frame '
 
     class PageForImport < SimplePage
       class Foo
@@ -331,8 +373,8 @@ module Gluon::Test
       '<input type="text" name="bar" value="should be picked up." />'
     def_test_view :text_content_ignored, PageForText,
       '<input type="text" name="foo" value="" />'
-    def_test_optional_id :text, PageForText, :foo
-    def_optional_class_test :text, PageForText, :foo
+    def_test_optional_id :text, PageForText, :foo, '<input '
+    def_test_optional_class :text, PageForText, :foo, '<input '
 
     class PageForPassword < SimplePage
       def initialize
@@ -350,8 +392,8 @@ module Gluon::Test
       '<input type="password" name="bar" value="should be picked up." />'
     def_test_view :password_content_ignored, PageForPassword,
       '<input type="password" name="foo" value="" />'
-    def_test_optional_id :password, PageForPassword, :foo
-    def_optional_class_test :password, PageForPassword, :foo
+    def_test_optional_id :password, PageForPassword, :foo, '<input '
+    def_test_optional_class :password, PageForPassword, :foo, '<input '
 
     class PageForSubmit < SimplePage
       def foo
@@ -369,8 +411,8 @@ module Gluon::Test
       '<input type="submit" name="bar()" value="should be picked up." />'
     def_test_view :submit_content_ignored, PageForSubmit,
       '<input type="submit" name="foo()" />'
-    def_test_optional_id :submit, PageForSubmit, :foo
-    def_optional_class_test :submit, PageForSubmit, :foo
+    def_test_optional_id :submit, PageForSubmit, :foo, '<input '
+    def_test_optional_class :submit, PageForSubmit, :foo, '<input '
 
     class PageForHidden < SimplePage
       def initialize
@@ -388,8 +430,8 @@ module Gluon::Test
       '<input type="hidden" name="bar" value="Hello world." />'
     def_test_view :hidden_content_ignored, PageForHidden,
       '<input type="hidden" name="foo" value="" />'
-    def_test_optional_id :hidden, PageForHidden, :foo
-    def_optional_class_test :hidden, PageForHidden, :foo
+    def_test_optional_id :hidden, PageForHidden, :foo, '<input '
+    def_test_optional_class :hidden, PageForHidden, :foo, '<input '
 
     class PageForCheckbox < SimplePage
       def initialize
@@ -410,8 +452,8 @@ module Gluon::Test
     def_test_view :checkbox_content_ignored, PageForCheckbox,
       '<input type="hidden" name="foo@type" value="bool" />' +
       '<input type="checkbox" name="foo" value="true" />'
-    def_test_optional_id :checkbox, PageForCheckbox, :foo
-    def_optional_class_test :checkbox, PageForCheckbox, :foo
+    def_test_optional_id :checkbox, PageForCheckbox, :foo, '<input '
+    def_test_optional_class :checkbox, PageForCheckbox, :foo, '<input '
 
     class PageForRadio < SimplePage
       def initialize
@@ -428,8 +470,8 @@ module Gluon::Test
       '<input type="radio" name="foo" value="banana" checked="checked" />'
     def_test_view :radio_content_ignored, PageForRadio,
       '<input type="radio" name="foo" value="apple" />'
-    def_test_optional_id :radio, PageForRadio, :foo
-    def_optional_class_test :radio, PageForRadio, :foo
+    def_test_optional_id :radio, PageForRadio, :foo, '<input '
+    def_test_optional_class :radio, PageForRadio, :foo, '<input '
 
     class PageForSelect < SimplePage
       def initialize
@@ -468,8 +510,8 @@ module Gluon::Test
       '<option value="banana">Banana</option>' +
       '<option value="orange" selected="selected">Orange</option>' +
       '</select>'
-    def_test_optional_id :select, PageForSelect, :foo
-    def_optional_class_test :select, PageForSelect, :foo
+    def_test_optional_id :select, PageForSelect, :foo, '<select '
+    def_test_optional_class :select, PageForSelect, :foo, '<select '
 
     class PageForTextarea < SimplePage
       def initialize
@@ -487,8 +529,8 @@ module Gluon::Test
       %Q'<textarea name="bar">Hello world.\n</textarea>'
     def_test_view :textarea_content_ignored, PageForTextarea,
       '<textarea name="foo"></textarea>'
-    def_test_optional_id :textarea, PageForTextarea, :foo
-    def_optional_class_test :textarea, PageForTextarea, :foo
+    def_test_optional_id :textarea, PageForTextarea, :foo, '<textarea '
+    def_test_optional_class :textarea, PageForTextarea, :foo, '<textarea '
   end
 end
 
