@@ -1,3 +1,8 @@
+2008-10-23  TOKI Yoshinori  <toki@freedom.ne.jp>
+
+	* lib/gluon/ckview.rb, lib/gluon/po.rb: optional `id' and `class'
+	embedded at template.
+
 2008-10-19  TOKI Yoshinori  <toki@freedom.ne.jp>
 
 	* lib/gluon/po.rb: obsolete link_uri and frame_uri.
